--- a/examples/adapter-cubemap-tiles.html
+++ b/examples/adapter-cubemap-tiles.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PhotoSphereViewer - cubemap tiles demo</title>
 
-        <link rel="stylesheet" href="/dist/core/index.css" />
+        <link rel="stylesheet" href="/packages/core/dist/index.css" />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -15,10 +15,10 @@
             {
                 "imports": {
                     "three": "/node_modules/three/build/three.module.js",
-                    "@photo-sphere-viewer/core": "/dist/core/index.module.js",
-                    "@photo-sphere-viewer/cubemap-adapter": "/dist/cubemap-adapter/index.module.js",
-                    "@photo-sphere-viewer/cubemap-tiles-adapter": "/dist/cubemap-tiles-adapter/index.module.js",
-                    "@photo-sphere-viewer/gyroscope-plugin": "/dist/gyroscope-plugin/index.module.js"
+                    "@photo-sphere-viewer/core": "/packages/core/dist/index.module.js",
+                    "@photo-sphere-viewer/cubemap-adapter": "/packages/cubemap-adapter/dist/index.module.js",
+                    "@photo-sphere-viewer/cubemap-tiles-adapter": "/packages/cubemap-tiles-adapter/dist/index.module.js",
+                    "@photo-sphere-viewer/gyroscope-plugin": "/packages/gyroscope-plugin/dist/index.module.js"
                 }
             }
         </script>
