--- a/examples/adapter-equirectangular.html
+++ b/examples/adapter-equirectangular.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PhotoSphereViewer - equirectangular demo</title>
 
-        <link rel="stylesheet" href="/dist/core/index.css" />
+        <link rel="stylesheet" href="/packages/core/dist/index.css" />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -37,7 +37,7 @@
             {
                 "imports": {
                     "three": "/node_modules/three/build/three.module.js",
-                    "@photo-sphere-viewer/core": "/dist/core/index.module.js"
+                    "@photo-sphere-viewer/core": "/packages/core/dist/index.module.js"
                 }
             }
         </script>
